[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/particles/boss_defense_attack.gd" type="Script" id=1]
[ext_resource path="res://src/particles/bossdefenseweapon.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/zap1.png" type="Texture" id=3]
[ext_resource path="res://assets/particles/zap2.png" type="Texture" id=4]
[ext_resource path="res://src/particles/circlingstardust_mk2.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/particles/circling_part.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "shot",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AnimatedTexture" id=3]
frames = 2
fps = 20.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0

[node name="bossdefenseattack" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "shot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="bossdefenseweapon" type="Position2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="light" type="Light2D" parent="."]
texture = SubResource( 3 )

[node name="circling_part" parent="." instance=ExtResource( 6 )]

[node name="circlingstardust_mk2" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 1, 1, 0.160784 )

[connection signal="body_entered" from="." to="." method="_on_bossdefenseattack_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
